Fix curve conversion in FREE mode from 16 to 8 bit

BUG: 281095
FIXED-IN: 3.2.0